<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/edit_task_layout"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:contentDescription="@string/surrounds_the_date_on_the_today_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/title_rect" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:text="@string/edit_task_button"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="377dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="640dp"
            android:layout_marginEnd="25dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableRow
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/table_border">

            <TextView
                    android:id="@+id/task_description_text_title"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_description"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_description" />

            <EditText
                    android:id="@+id/task_description_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_description"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_description" />

        </TableRow>

        <TableRow
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/table_border">

            <TextView
                    android:id="@+id/task_priority_text_title"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_priority"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_priority" />

            <Spinner
                    android:id="@+id/priority_spinner2"
                    android:layout_height="match_parent"
                    android:entries="@array/priority_list"
                    android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/table_border">

            <TextView
                    android:id="@+id/task_date_title"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_date_title"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_date_title" />

            <Button
                    android:id="@+id/edit_task_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_date"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_date" />

        </TableRow>

        <TableRow
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/table_border">

            <TextView
                    android:id="@+id/task_start_time_text_title"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_start_time_title"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_start_time_title" />

            <Button
                    android:id="@+id/task_start_time_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_time"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_time" />
        </TableRow>

        <TableRow
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/table_border">

            <TextView
                    android:id="@+id/task_end_time_text_title"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_end_time_title"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    tools:text="@string/task_end_time_title" />

            <Button
                    android:id="@+id/task_end_time_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_time"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp"
                    tools:text="@string/task_time" />
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/finish_editing_task_button"
            android:layout_width="121dp"
            android:layout_height="64dp"
            android:layout_marginTop="570dp"
            android:text="Finish"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>