<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        tools:context=".MainActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/title_rect" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/surrounds_the_date_on_the_today_page"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp" android:layout_marginEnd="106dp" android:layout_marginRight="106dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/settings_title"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="32sp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp" android:textColor="#FFFFFF"/>
    <Switch
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/switch1" tools:text="@string/night_mode"
            app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="231dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>